@@ -3,12 +3,12 @@
     "donate_url": "https://www.paypal.me/ahq254",
     "website_url": "https://revengeos.com/",
     "news_url": "https://t.me/RevengeOSNews",
-    "datetime": 1610557728.084742,
-    "filename": "RevengeOS-4.0-R-OFFICIAL-toco-20210113-1531.zip",
+    "datetime": 1611810134.5662987,
+    "filename": "RevengeOS-4.0-R-OFFICIAL-toco-20210127-1855.zip",
     "id": "",
-    "size": "707142067",
-    "url": "https://osdn.net/frs/redir.php?f=%2Fstorage%2Fg%2Fr%2Fre%2Frevengeos%2Ftoco%2FRevengeOS-4.0-R-OFFICIAL-toco-20210113-1531.zip",
+    "size": "718328351",
+    "url": "https://osdn.net/frs/redir.php?f=%2Fstorage%2Fg%2Fr%2Fre%2Frevengeos%2Ftoco%2FRevengeOS-4.0-R-OFFICIAL-toco-20210127-1855.zip",
     "download_new": "https://download.revengeos.com/download/toco",
     "version": "4.0",
-    "filehash": "4f9e716a274ff9fc50dcf9e152146a99"
+    "filehash": "a12de9d7404934b20c7e402d866048e5"
 }
